[package]
name = "rumble_vpn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rumble"

[[bin]]
name = "rumble-client"
path = "src/bin/client.rs"

[[bin]]
name = "rumble-server"
path = "src/bin/server.rs"

[[bin]]
name = "rumble-user"
path = "src/bin/user.rs"

[dependencies]
# Protocol
quinn = "0.10"

# Interfaces and networking
tun = { version = "0.5.5", features = ["async"] }
socket2 = "0.5.3"
bytes = "1.5.0"
etherparse = "0.13.0"
ipnet = "2.8.0"
libc = "0.2.147"

# Tokio innit?
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-util"] }
dashmap = "5.5.3"

# Config
figment = { version = "0.10.10", features = ["toml", "env"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"

# TLS
rustls = "0.21.7"
rustls-pemfile = "1.0.3"

# Authentication
argon2 = "0.5.2"
rpassword = "7.2"

# Tracing/Logging
tracing = { version = "^0.1.37", features = ["release_max_level_info"] }
tracing-subscriber = { version = "^0.3.17", features = ["env-filter"] }

# Error handling
anyhow = "1.0.75"

# Rando utils
time = "0.3.28"
delegate = "0.10.0"
clap = { version = "4.4.2", features = ["derive"] }
once_cell = "1.18.0"